added link to developer doc and updated to java 13