@@ -38,19 +38,14 @@ sollte die Version von Git ausgeben, also z.B.
 
 ### Installieren von Java
 
-Für die Entwicklung von JabRef benötigt Java in der Version 11 oder höher. Sie können aktuelle Versionen vom OpenJDK von [AdoptOpenJDK](https://adoptopenjdk.net/) herunterladen. 
+Für die Entwicklung von JabRef benötigt Java in der Version 13. Sie können aktuelle Versionen vom OpenJDK von [AdoptOpenJDK](https://adoptopenjdk.net/) herunterladen. 
 
 #### Test der Installation
 Um die Installation zu testen, öffnen Sie eine Konsole und geben folgendes ein:
 ```
 java -version 
 ```
-Die Ausgabe sollte anzeigen, dass Sie Java 11 verwenden, also z.B.
-```
-> openjdk version "11.0.4" 2019-07-16
-> OpenJDK Runtime Environment AdoptOpenJDK (build 11.0.4+11)
-> OpenJDK 64-Bit Server VM AdoptOpenJDK (build 11.0.4+11, mixed mode)
-```
+Die Ausgabe sollte anzeigen, dass Sie Java 13 verwenden.
 
 ### IntelliJ Idea
 
@@ -106,25 +101,8 @@ können Sie das Projekt dann starten.
 
 ### Bearbeiten des Projekts in der IDE
 
-Sie werden in diesem Kurs hauptsächlich von der IDE arbeiten. Um das Projekt in Intellij Idea zu öffnen, müssen Sie die gradle Builddefinition öffnen 
-```
-jabref\build.gradle
-```
-Die Datei öffnen Sie mittels ```File->Open``` oder dem ```Open``` Button auf dem Startscreen von Idea.
+Von nun an werden Sie hautsächlich mit der IDE arbeiten. Wie sie JabRef einrichten, ist in der JabRef [Development Documentatation](https://devdocs.jabref.org/guidelines-for-setting-up-a-local-workspace) erklärt.
 
-Wählen Sie nun "Open as project" um das Projekt zu öffnen. 
-Leider nutzt JabRef zur Zeit Funktionen einer Bibliothek, die nicht korrekt exportiert wurden. Dies kann innerhalb von IntelliJ zu Problemen führen. Als Workaround können Sie folgendes machen:
-Öffnen Sie ```File->Settings->Build, Execution, Development -> Java Compiler``` und fügen Sie für das Modul ```JabRef.main``` folgende Compiler Optionen hinzu (siehe Screenshot):
-```
---add-exports org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref --add-exports javafx.controls/javafx.scene.control=org.jabref --add-exports javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls --add-exports javafx.controls/com.sun.javafx.scene.control=org.jabref
-```
-![idea-compiler](../../exercises/images/idea-compiler.png)
-
-Sie sollten nun mit dem Projekt arbeiten können. Um das Projekt zu kompilieren und  JabRef zu starten, führen Sie die entsprechenden Gradle tasks aus. Diese finden Sie im Gradle Tool Window (siehe Screenshot).
-![image](../../exercises/images/intellij-run-jabref.png) 
-
-
-Wenn alles geklappt hat und Sie JabRef erfolgreich starten konnten, sind Sie nun in der Lage JabRef nach ihren Wünschen zu verändern. Mehr dazu in den nächsten Übungen. 
 
 
 
